--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,4 @@ extends layout
 
 block content
   h1= title
-  p From the desk of Casey Mershon : Welcome to #{title}
+  p From the desk of Sir Knight Casey Mershon : Welcome to #{title}
